# yp-video

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  detect_volleyball.py  pyproject.toml  rally.sh  run_internvideo_next.py  setup.sh  start_qwen3_vl_server.sh  start_vllm_server.sh  vllm.env  vlm_segment.py
actionformer/libs/core/: config.py
actionformer_release/libs/modeling/: losses.py  meta_archs.py
annotator/: __init__.py  main.py
annotator/static/: index.html
app/: jobs.py  main.py  vllm_manager.py
app/routers/: annotate.py  cut.py  detect.py  download.py  jobs.py  predict.py  system.py  train.py
app/static/js/pages/: annotate.js  cut.js  detect.js  download.js  predict.js
contracts/: action_label.schema.json  detector.schema.json
docs/: architecture.html  cut-frame-mismatch-list.txt  cut-frame-mismatch.md  third_party.md
prompts/: rally-seg-broadcast.txt  rally-seg-sideline.txt  volleyball_segment.txt
scripts/: describe_rally_segments.py  export_to_app.py  extract_unannotated.py  viz_action_rallies.py
src/yp_video/: __init__.py  app_export.py  app_library.py  config.py  rally_spot.py
src/yp_video/action/: __init__.py  frames.py  predict.py  prelabel.py  segments.py
src/yp_video/contracts/: __init__.py  action.py  detector.py  exceptions.py  make_schema.py  reid.py
src/yp_video/core/: __init__.py  action_frames.py  annotation_ids.py  cache.py  ffmpeg.py  jsonl.py  sampling.py  spot_prelabel.py  vlm_refine.py  vlm_segment.py  vlm_to_rally.py
src/yp_video/reid/: __init__.py  checkpoints.py  clip_reident.py  dataset.py  detector.py  embedder.py  evaluate.py  identity.py  metrics.py  pipeline.py  sam3d.py  seg.py  sessions.py  store.py  tracking.py
src/yp_video/tad/: __init__.py  _actionformer.py  action_trim.py  convert_annotations.py  extract_features.py  infer.py  output_converter.py  train.py  vlm_to_rally.py
src/yp_video/tad/configs/: volleyball_actionformer.py  volleyball_actionformer.yaml  volleyball_i3d.py
src/yp_video/vlm/: build_manifest.py  train.py
src/yp_video/web/: __init__.py  app.py  job_helpers.py  jobs.py  r2_client.py  spot_runs.py  vllm_manager.py
src/yp_video/web/frontend/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
src/yp_video/web/frontend/src/: App.tsx  index.css  main.tsx
src/yp_video/web/frontend/src/components/: Placeholder.tsx
src/yp_video/web/frontend/src/components/editor/: ActionTimeline.tsx  AnnotationEditor.tsx  DownloadClipsModal.tsx  RallyTimeline.tsx
src/yp_video/web/frontend/src/components/feedback/: ConfirmDialog.tsx  Toaster.tsx  confirm.ts  toast.ts
src/yp_video/web/frontend/src/components/job/: JobItems.tsx  JobProgress.tsx  JobProgressCard.tsx  LiveJob.tsx  ProgressBar.tsx  StatusBadge.tsx
src/yp_video/web/frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx  nav.ts
src/yp_video/web/frontend/src/components/reid/: GroupBoard.tsx  ReidRallySidebar.tsx  ReidVideoPlayer.tsx  masks.ts  shared.ts  useGroupBoard.ts
src/yp_video/web/frontend/src/components/train/: ActionPerfCharts.tsx  BreakdownTable.tsx  Field.tsx  PerformanceChart.tsx  TrainDetail.tsx  TrainPerfCard.tsx
src/yp_video/web/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Icon.tsx  PageHeader.tsx  SectionLabel.tsx  StatTile.tsx  TriStateFilter.tsx
src/yp_video/web/frontend/src/components/video/: CropImage.tsx  KindBadge.tsx  VideoCombobox.tsx  VideoMultiSelectList.tsx
src/yp_video/web/frontend/src/lib/: actionColors.ts  api.ts  cn.ts  download.ts  format.ts  job.ts  query.ts  sse.ts  theme.ts  usePresence.ts  useSSE.ts  useVideoRecovery.ts
src/yp_video/web/frontend/src/pages/: ActionAnnotatePage.tsx  ActionPredictPage.tsx  ActionTrainPage.tsx  AnnotatePage.tsx  CutPage.tsx  DetectPage.tsx  DownloadPage.tsx  JobsPage.tsx  PredictPage.tsx  ReidLabelPage.tsx  ReidPredictPage.tsx  ReidTrainPage.tsx  ReviewPage.tsx  SpotPredictPage.tsx  SpotTrainPage.tsx  TrainPage.tsx  UploadPage.tsx
src/yp_video/web/frontend/src/types/: api.ts
src/yp_video/web/routers/: action_annotate.py  action_train.py  annotate.py  cut.py  detect.py  download.py  jobs.py  predict.py  reid.py  reid_train.py  review.py  spot_predict.py  spot_train.py  system.py  train.py  upload.py  vlm.py
src/yp_video/web/static/: index.html
src/yp_video/web/static/js/: router.js  shared.js
src/yp_video/web/static/js/components/: annotation_editor.js
src/yp_video/web/static/js/pages/: action-annotate.js  action-predict.js  action-train.js  annotate.js  cut.js  detect.js  download.js  jobs.js  predict.js  review.js  train.js  upload.js  vlm.js
src/yp_video/youtube/: __init__.py  download.py  rename_tpvl.py
tad/: __init__.py  convert_annotations.py  extract_features.py  infer.py  train.py  vlm_to_rally.py
tad/configs/: volleyball_actionformer.py
utils/: __init__.py  ffmpeg.py
youtube/: __init__.py  download.py
youtube/cutter/: __init__.py  ffmpeg.py  main.py
youtube/cutter/static/: index.html
youtube/downloader/: __init__.py  main.py
youtube/downloader/static/: index.html
