[project]
name = "yp-video"
version = "1.0.0"
description = "Volleyball video analysis pipeline: download, cut, detect, annotate, train, predict"
requires-python = ">=3.10"
dependencies = [
    # Video decode / probing
    "decord>=0.6.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    # YouTube download
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
    "pycryptodome>=3.20.0",
    # Cloud storage
    "boto3>=1.34.0",
    # Web application (vLLM serves the VLM detect flow; brings torch with it)
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "vllm>=0.17.0",
    "google-genai>=1.0.0",
]


[project.scripts]
# Web Dashboard
yp-app = "yp_video.web.app:run_server"
# Pipeline CLI (按使用順序)
yp-download = "yp_video.youtube.download:main"
yp-vlm-segment = "yp_video.core.vlm_segment:main"
yp-vlm-to-rally = "yp_video.tad.vlm_to_rally:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yp_video"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
