[project]
name = "yp-video"
version = "1.0.0"
description = "Volleyball video analysis pipeline: download, cut, detect, annotate, train, predict"
requires-python = ">=3.10"
dependencies = [
    # Video decode / probing
    "decord>=0.6.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    # YouTube download
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
    "pycryptodome>=3.20.0",
    # Cloud storage
    "boto3>=1.34.0",
    # Web application (vLLM serves the VLM detect flow; brings torch with it)
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    # vllm>=0.24 moves to transformers 5, which rfdetr>=1.8 requires too —
    # these two must stay on the same side of the transformers 4/5 boundary.
    "vllm>=0.24.0",
    "google-genai>=1.0.0",
    # Player ReID: person detection on action frames + embedding clustering.
    # onnxruntime runs the CLIP-ReID embedder (ONNX export; CPU is fast enough
    # for a few hundred crops per video).
    "rfdetr>=1.8.3",
    "scipy>=1.11",
    "onnxruntime>=1.20",
    # Optional third_party embedders/keypoints (see docs/third_party.md) run
    # inside THIS venv — the checkouts bring code only, their Python deps are
    # declared here so a fresh `uv sync` can serve them.
    # CLIP-ReIdent needs timm / albumentations / pandas / scikit-learn;
    # SAM 3D Body needs timm / yacs / wandb / omegaconf.
    # albumentations 2.x removed always_apply, which the checkouts' custom
    # transforms still pass — stay on 1.x until upstream moves.
    "timm>=1.0",
    "albumentations>=1.3.1,<1.4",
    "yacs>=0.1.8",
    "pandas>=2",
    "scikit-learn>=1.4",
    "wandb>=0.17",
    "omegaconf>=2.3",
    # CLIP-ReIdent: OpenCLIP backbone (+ ftfy, its tokenizer dep); gdown
    # fetches the Google Drive checkpoint in the setup instructions.
    "open-clip-torch>=3.3",
    "ftfy>=6.3",
    "gdown>=5.0",
    # SAM 3D Body (body-only inference path).
    "pytorch-lightning>=2.4",
    "roma>=1.5",
    "termcolor>=2",
    "braceexpand>=0.1",
    "orjson>=3.11.9",
]


[project.scripts]
# Web Dashboard
yp-app = "yp_video.web.app:run_server"
# Pipeline CLI (按使用順序)
yp-download = "yp_video.youtube.download:main"
yp-vlm-segment = "yp_video.core.vlm_segment:main"
yp-vlm-to-rally = "yp_video.core.vlm_to_rally:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yp_video"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
